	PR rtl-optimization/47157 	* combine.c (try_combine): If undobuf.other_insn becomes 	(set (pc) (pc)) jump, call update_cfg_for_uncondjump on it 	and set *new_direct_jump_p too.

* gcc.c-torture/compile/pr47157.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168439 138bc75d-0d04-0410-961f-82ee72b054a4